--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^12.11.1",
     "electron": "^16.0.7",
     "electron-builder": "^22.14.5",
+    "electron-packager": "^15.4.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
