--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.1.3",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "luxon": "^2.3.0",
     "mysql": "2.18.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
