--- a/package.json
+++ b/package.json
@@ -29,17 +29,21 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
     "cors": "2.8.5",
+    "exceljs": "^4.3.0",
     "express": "4.17.1",
+    "file-saver": "^2.0.5",
     "luxon": "^2.3.0",
     "mysql": "2.18.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.1",
     "@angular/cli": "^12.2.16",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "electron": "^17.1.1",
