--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+    "typeRoots": [
+      "src/typings",
+      "node_modules/@types"
+    ],
     "lib": [
       "es2018",
       "dom"
