--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "electron": "ng build --base-href ./ && electron .",
+    "electron-build": "ng build --prod && electron .",
     "package-mac-m1": "electron-packager . --overwrite --platform=darwin ---arch=arm64 --icon=./src/assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-mac-intel": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=./src/assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64  --icon=./src/assets/icons/win/icon.ico --out=release-builds",
     "tauri": "tauri"
   },
   "private": true,
-  "dependencies": {
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~12.2.1",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.13",
+    "@angular/cli": "^12.2.16",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/localize": "~12.2.0",
@@ -29,34 +33,31 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^5.1.3",
-    "cors": "2.8.5",
-    "exceljs": "^4.3.0",
-    "express": "4.17.1",
-    "file-saver": "^2.0.5",
-    "luxon": "^2.3.0",
-    "mysql": "2.18.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "xlsx": "^0.18.5",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular/cli": "^12.2.16",
-    "@angular/compiler-cli": "~12.2.0",
+    "@tauri-apps/api": "^1.0.1",
+    "@tauri-apps/cli": "^1.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "bootstrap": "^5.1.3",
+    "cors": "2.8.5",
     "electron": "^17.1.1",
     "electron-builder": "^22.14.5",
     "electron-packager": "^15.4.0",
+    "exceljs": "^4.3.0",
+    "express": "4.17.1",
+    "file-saver": "^2.0.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "luxon": "^2.3.0",
+    "mysql": "2.18.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
+    "xlsx": "^0.18.5",
+    "zone.js": "~0.11.4"
   }
 }
